--- a/MidiOrchestrator/TrackControl.xaml
+++ b/MidiOrchestrator/TrackControl.xaml
@@ -17,7 +17,7 @@
             <Button x:Name="btnMute" Content="Mute" HorizontalAlignment="Center"/>
             <Button x:Name="btnRec" Content="Rec" HorizontalAlignment="Center"/>
             <Slider x:Name="volumeSlider" Orientation="Vertical" Height="93" VerticalAlignment="Center" HorizontalAlignment="Center" />
-            <TextBlock x:Name="txtName" Text="Name" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+            <TextBlock x:Name="txtName" Text="{Binding Name}" VerticalAlignment="Center" HorizontalAlignment="Center"/>
         </StackPanel>
 
     </Grid>
