--- a/MidiOrchestrator/TrackControl.xaml
+++ b/MidiOrchestrator/TrackControl.xaml
@@ -6,32 +6,31 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    d:DesignHeight="528.667"
-    d:DesignWidth="55">
+    
+    >
 
     <Grid >
-        <StackPanel HorizontalAlignment="Left" VerticalAlignment="Top" BorderThickness="1" BorderBrush="{ThemeResource ButtonBorderThemeBrush}">
+        <StackPanel HorizontalAlignment="Left" VerticalAlignment="Top" BorderThickness="1" BorderBrush="{ThemeResource ButtonBorderThemeBrush}" Margin="1">
 
-            <Button x:Name="btnProgram" HorizontalAlignment="Center" VerticalAlignment="Stretch" Width="32" Height="32" Margin="8"
+            <Button x:Name="btnProgram" HorizontalAlignment="Center" VerticalAlignment="Stretch" Width="32" Height="32" Margin="4"
                     Content="{Binding Program, FallbackValue=0}"
                     FontSize="14" Padding="0"
                     />
 
-            <Slider x:Name="vuMeter" Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center" Height="93" Margin="8"
-                    Value="{Binding VuMeter, FallbackValue=0}" Minimum="0" Maximum="100"/>
+            <ProgressBar Value="{Binding VuMeter, FallbackValue=0}" Minimum="0" Maximum="100" Margin="4" Height="8" />
 
 
-            <Button x:Name="btnSolo" Content="S" HorizontalAlignment="Center" Width="32" Height="32" Margin="8"/>
-            <Button x:Name="btnMute" Content="M" HorizontalAlignment="Center" Width="32" Height="32" Margin="8"/>
-            <Button x:Name="btnRec" Content="R" HorizontalAlignment="Center" Width="32" Height="32" Margin="8"/>
+            <Button x:Name="btnSolo" Content="S" HorizontalAlignment="Center" Width="32" Height="32" Margin="4"/>
+            <Button x:Name="btnMute" Content="M" HorizontalAlignment="Center" Width="32" Height="32" Margin="4"/>
+            <Button x:Name="btnRec" Content="R" HorizontalAlignment="Center" Width="32" Height="32" Margin="4"/>
 
-            <Slider x:Name="panSlider" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center"  Width="48" Margin="8"
+            <Slider x:Name="panSlider" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center"  Width="48" Margin="4"
                     Value="{Binding Pan, FallbackValue=64}" Minimum="0" Maximum="127"/>
 
-            <Slider x:Name="volumeSlider" Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center" Height="100" Margin="8"
-                    Value="{Binding Volume, FallbackValue=0}" Minimum="0" Maximum="127"/>
+            <Slider x:Name="volumeSlider" Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center" Height="106" Margin="4"
+                    Value="{Binding Volume, FallbackValue=0}" Minimum="0" Maximum="127" Width="40"/>
 
-            <TextBlock x:Name="txtName" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="8" Width="76"
+            <TextBlock x:Name="txtName" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="4" Width="76"
                        Text="{Binding Name, FallbackValue=-}" TextAlignment="Center"/>
         </StackPanel>
 
